runFormatTest(import.meta, ["babel"], { sourceOrder: true });
runFormatTest(import.meta, ["babel"], { sourceOrder: false });
